--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a app for building music sites ",
   "main": "index.js",
   "scripts": {
+    "start" : "nodemon webroot/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
