--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a app for building music sites ",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon -e js,jsx webroot/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -e js,jsx webroot/server/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "cookie-parser": "^1.4.3",
     "couch-db": "^1.1.3",
     "dotenv": "^6.0.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "es6-promise": "^4.2.5",
     "eslint-loader": "^2.1.0",
     "expect": "^23.6.0",
@@ -67,6 +68,7 @@
     "postcss-loader": "^3.0.0",
     "promise": "^8.0.2",
     "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.5.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
@@ -134,5 +136,38 @@
     "sinon-chai": "^3.2.0",
     "standard": "^12.0.1",
     "style-loader": "^0.23.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "webroot/**/*.{js,jsx}"
+    ],
+    "setupTestFrameworkScriptFile": "<rootDir>/test/setupTest.js",
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/webroot/**/__tests__/**/*.js?(x)",
+      "<rootDir>/webroot/**/?(*.)(spec|test).js?(x)"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx"
+    ]
   }
 }
