--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -e js,jsx webroot/server/index.js",
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --mode=production webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "babel-preset-react-app": "^3.1.2",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.4.1",
@@ -101,7 +103,6 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.1",
     "css-loader": "^1.0.0",
@@ -135,7 +136,8 @@
     "sinon": "^6.3.4",
     "sinon-chai": "^3.2.0",
     "standard": "^12.0.1",
-    "style-loader": "^0.23.0"
+    "style-loader": "^0.23.0",
+    "webpack-cli": "^3.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
