--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["transform-class-properties"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-transform-runtime"],
+  "ignore": []
 }
