--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -e js,jsx webroot/server/index.js",
     "test": "jest",
-    "build": "webpack --mode=production webpack.config.js"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -18,126 +18,31 @@
   "author": "Trevor Joseph",
   "license": "ISC",
   "homepage": "https://bitbucket.org/fizzyliquid/mixdown#readme",
+  "devDependencies": {
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
+  },
   "dependencies": {
-    "add": "^2.0.6",
-    "axios": "^0.18.0",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.2",
-    "babel-preset-node6": "^11.0.0",
-    "babel-preset-react-app": "^3.1.2",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
+    "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "chalk": "^2.4.1",
-    "concurrently": "^4.0.1",
-    "connect-mongo": "^2.0.1",
-    "connect-mongodb-session": "^2.0.3",
-    "cookie-parser": "^1.4.3",
-    "couch-db": "^1.1.3",
-    "dotenv": "^6.0.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "es6-promise": "^4.2.5",
-    "eslint-loader": "^2.1.0",
-    "expect": "^23.6.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "express-validator": "^5.3.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "fetch-mock": "^7.0.0-alpha.6",
-    "file-loader": "^2.0.0",
-    "formidable": "^1.2.1",
-    "fs-extra": "^7.0.0",
-    "history": "^4.7.2",
+    "css-loader": "^1.0.0",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.6.0",
-    "lodash": "^4.17.11",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.15",
-    "morgan": "^1.9.1",
-    "multer": "^1.3.1",
-    "mysql": "^2.16.0",
-    "node-fetch": "^2.2.0",
-    "nodemon": "^1.18.4",
-    "nvm": "^0.0.4",
-    "object-assign": "^4.1.1",
-    "objectid": "^3.2.1",
-    "passport": "^0.4.0",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
-    "promise": "^8.0.2",
-    "prop-types": "^15.6.2",
-    "query-string": "^6.1.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "query-string": "^6.2.0",
     "react": "^16.5.2",
-    "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
-    "react-error-overlay": "^4.0.1",
-    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-form": "^7.4.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.12.1",
-    "sass-resources-loader": "^1.3.3",
-    "session-file-store": "^1.2.0",
-    "sw-precache-webpack-plugin": "^0.11.5",
-    "universalify": "^0.1.2",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.19.1",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-manifest-plugin": "^2.0.4",
-    "yarn": "^1.9.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.2",
-    "chai-enzyme": "^1.0.0-beta.1",
-    "css-loader": "^1.0.0",
-    "enzyme": "^3.6.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "ignore-styles": "^5.0.1",
-    "jsdom": "^12.0.0",
-    "jsdom-global": "^3.0.2",
-    "karma": "^3.0.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-requirejs": "^1.1.0",
-    "karma-sinon": "^1.0.5",
-    "karma-sinon-chai": "^2.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
-    "mocha": "^5.2.0",
-    "node-sass": "^4.9.3",
-    "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.5.2",
-    "redux-mock-store": "^1.5.3",
-    "requirejs": "^2.3.6",
-    "sass-loader": "^7.1.0",
-    "sinon": "^6.3.4",
-    "sinon-chai": "^3.2.0",
-    "standard": "^12.0.1",
-    "style-loader": "^0.23.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-dev-server": "^3.1.9"
   },
   "jest": {
     "collectCoverageFrom": [
