--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.16.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "^0.4.4",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
