--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/fizzyliquid/mixdown#readme",
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.8.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
   },
@@ -51,6 +52,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "regenerator-runtime": "^0.12.1",
+    "styled-components": "^4.0.3",
     "webpack-dev-server": "^3.1.9"
   },
   "jest": {
