added server side rendering to apollo

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "a app for building music sites ",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon -e js,jsx webroot/server/index.js",
-    "test": "jest",
+    "start:server": "nodemon -e js,jsx webroot/server/index.js",
+    "test": "jest --watch",
     "build": "webpack --mode=production",
-    "start": "webpack-dev-server --mode=development --open"
+    "startdev": "webpack-dev-server --mode=development --open",
+    "start:db": "./start-db.sh",
+    "stop:db": " mongod --quiet"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,12 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.1.2",
+    "apollo-boost": "^0.1.20",
+    "apollo-cache-inmemory": "^1.3.9",
+    "apollo-client": "^2.4.5",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -41,21 +49,33 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "es6-promise": "^4.2.5",
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "fetch-mock": "^7.2.5",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
+    "jest-fetch-mock": "^1.6.6",
     "mini-css-extract-plugin": "^0.4.4",
+    "mockingoose": "^2.11.0",
+    "mongoose": "^5.3.10",
+    "node-fetch": "^2.2.1",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
+    "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "regenerator-runtime": "^0.12.1",
     "styled-components": "^4.0.3",
+    "unfetch": "^4.0.1",
     "webpack-dev-server": "^3.1.9"
   },
   "jest": {
+    "automock": false,
     "collectCoverageFrom": [
       "webroot/**/*.{js,jsx}"
     ],
