--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "css-loader": "^1.0.0",
     "dotenv": "^6.1.0",
     "enzyme": "^3.7.0",
