--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://bitbucket.org/fizzyliquid/mixdown#readme",
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
+    "file-loader": "^2.0.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
   },
