--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
     "file-loader": "^2.0.0",
+    "graphql-tag": "^2.10.0",
+    "jest-localstorage-mock": "^2.3.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
@@ -42,6 +44,7 @@
     "apollo-link-http": "^1.5.5",
     "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
@@ -51,10 +54,16 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "es6-promise": "^4.2.5",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "fetch-mock": "^7.2.5",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -62,10 +71,14 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "jest-fetch-mock": "^1.6.6",
+    "jsonwebtoken": "^8.4.0",
+    "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "mockingoose": "^2.11.0",
     "mongoose": "^5.3.10",
     "node-fetch": "^2.2.1",
+    "nodemon": "^1.18.6",
+    "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
@@ -84,7 +97,8 @@
     ],
     "setupTestFrameworkScriptFile": "<rootDir>/test/setupTest.js",
     "setupFiles": [
-      "<rootDir>/config/polyfills.js"
+      "<rootDir>/config/polyfills.js",
+      "jest-localstorage-mock"
     ],
     "testMatch": [
       "<rootDir>/webroot/**/__tests__/**/*.js?(x)",
