--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
+    "classname": "^0.0.0",
     "cors": "^2.8.5",
     "css-loader": "^1.0.0",
     "dotenv": "^6.1.0",
