--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["babel-plugin-styled-components", "@babel/plugin-transform-runtime"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "babel-plugin-styled-components",
+    "@babel/plugin-transform-runtime",
+    "syntax-async-functions"
+  ],
   "ignore": []
 }
