--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "@babel/runtime": "^7.1.2",
     "apollo-boost": "^0.1.20",
     "apollo-cache-inmemory": "^1.3.9",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.5",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "apollo-server": "^2.2.5",
+    "apollo-server-express": "^2.2.5",
     "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -77,6 +80,7 @@
     "jest-styled-components": "^6.3.1",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
+    "localstorage-polyfill": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.4",
     "mockingoose": "^2.11.0",
     "mongoose": "^5.3.10",
