--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "apollo-link-http": "^1.5.5",
     "apollo-server": "^2.2.5",
     "apollo-server-express": "^2.2.5",
+    "apollo-upload-client": "^10.0.0",
     "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -71,6 +72,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.3",
+    "graphql-yoga": "^1.16.9",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
@@ -91,6 +93,7 @@
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
+    "react-dropzone": "^8.0.3",
     "react-mock-router": "^1.0.15",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
