header nav update

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://bitbucket.org/fizzyliquid/mixdown#readme",
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
+    "copy-webpack-plugin": "^4.6.0",
     "file-loader": "^2.0.0",
     "graphql-tag": "^2.10.0",
     "jest-localstorage-mock": "^2.3.0",
@@ -44,6 +45,7 @@
     "apollo-client": "^2.4.5",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-state": "^0.4.2",
     "apollo-server": "^2.2.5",
     "apollo-server-express": "^2.2.5",
     "apollo-upload-client": "^10.0.0",
@@ -85,9 +87,11 @@
     "localstorage-polyfill": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.4",
     "mockingoose": "^2.11.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.3.10",
     "node-fetch": "^2.2.1",
     "nodemon": "^1.18.6",
+    "png-to-jpeg": "^1.0.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
