commented out assets in git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ node_modules
 # Ignore build files
 build/
 uploads/
-webroot/client/assets/
+# webroot/client/assets/
 
 .idea
 .idea/workspace.xml
