--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest --watch",
     "build": "webpack --mode=production",
     "start:dev": "webpack-dev-server --mode=development --open",
+    "start:cdn": "nodemon webroot/cdn/index.js",
     "start:db": "./start-db.sh",
     "stop:db": " mongod --quiet"
   },
@@ -89,6 +90,7 @@
     "mockingoose": "^2.11.0",
     "moment": "^2.24.0",
     "mongoose": "^5.3.10",
+    "multer": "^1.4.1",
     "node-fetch": "^2.2.1",
     "nodemon": "^1.18.6",
     "png-to-jpeg": "^1.0.1",
