--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:server": "nodemon -e js,jsx webroot/server/index.js",
-    "test": "jest --watch",
+    "test": "jest --watch --coverage",
     "build": "webpack --mode=production",
     "start:dev": "webpack-dev-server --mode=development --open",
     "start:cdn": "nodemon webroot/cdn/index.js",
