a lot of changes to list

--- a/.env
+++ b/.env
@@ -7,7 +7,10 @@ PASSWORD=root
 DATABASE=test
 SOCKETPATH=/Applications/MAMP/tmp/mysql/mysql.sock
 MONGODBURI=mongodb://localhost:27017
+GQL_SERVER=http://localhost:5000
 USERS=users
 MESSAGES=messages
 DB=mixdown
 JWT_SECRET=mysecret
+CDN=http://localhost:3003/static
+
