--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start:server": "nodemon -e js,jsx webroot/server/index.js",
-    "test": "jest --watch --coverage",
+    "test": "jest --watchAll --coverage",
     "build": "webpack --mode=production",
     "start:dev": "webpack-dev-server --mode=development --open",
     "start:cdn": "nodemon webroot/cdn/index.js",
     "start:db": "./start-db.sh",
     "stop:db": " mongod --quiet",
     "start": "concurrently \"yarn start:cdn \" \"yarn start:dev \" \"yarn start:server \""
+  },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
   },
   "repository": {
     "type": "git",
@@ -45,6 +49,7 @@
     "apollo-cache-inmemory": "^1.3.9",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.5",
+    "apollo-link": "^1.2.11",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-state": "^0.4.2",
@@ -83,31 +88,39 @@
     "ignore-styles": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
+    "jest-express": "^1.10.1",
     "jest-fetch-mock": "^1.6.6",
     "jest-styled-components": "^6.3.1",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
     "localstorage-polyfill": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.4",
+    "mock-fs": "^4.10.1",
     "mockingoose": "^2.11.0",
     "moment": "^2.24.0",
     "mongoose": "^5.3.10",
+    "moxios": "^0.4.0",
     "multer": "^1.4.1",
     "node-fetch": "^2.2.1",
     "nodemon": "^1.18.6",
+    "peaks": "^1.0.1",
     "png-to-jpeg": "^1.0.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
-    "react": "^16.5.2",
+    "react": "^16.8.0",
     "react-apollo": "^2.2.4",
-    "react-dom": "^16.5.2",
+    "react-cropper": "^1.2.0",
+    "react-dom": "^16.8.0",
     "react-dropzone": "^8.0.3",
     "react-mock-router": "^1.0.15",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-soundplayer": "^1.0.4",
     "regenerator-runtime": "^0.12.1",
     "styled-components": "^4.0.3",
+    "supertest": "^4.0.2",
     "unfetch": "^4.0.1",
+    "wavesurfer": "^1.3.4",
     "webpack-dev-server": "^3.1.9"
   },
   "jest": {
