--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "graphql-yoga": "^1.16.9",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
@@ -101,7 +102,7 @@
     "mongoose": "^5.3.10",
     "moxios": "^0.4.0",
     "multer": "^1.4.1",
-    "node-fetch": "^2.2.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.18.6",
     "peaks": "^1.0.1",
     "png-to-jpeg": "^1.0.1",
