--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start:server": "nodemon -e js,jsx webroot/server/index.js",
-    "test": "jest --watchAll --coverage",
+    "test": "jest --watch",
     "build": "webpack --mode=production",
     "start:dev": "webpack-dev-server --mode=development --open",
     "start:cdn": "nodemon webroot/cdn/index.js",
     "start:db": "./start-db.sh",
     "stop:db": " mongod --quiet",
-    "start": "concurrently \"yarn start:cdn \" \"yarn start:dev \" \"yarn start:server \""
+    "start": "concurrently \"yarn start:cdn \" \"yarn start:dev \" \"yarn start:server \" \"yarn start:db \""
   },
   "engines": {
     "node": ">=10.0.0",
@@ -32,7 +32,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "file-loader": "^2.0.0",
     "graphql-tag": "^2.10.0",
-    "jest-localstorage-mock": "^2.3.0",
+    "jest-localstorage-mock": "^2.4.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
